--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.0",
     "concat": "^1.0.3",
+    "copyfiles": "^2.4.1",
     "node-sass": "^6.0.1",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.3.11",
@@ -20,7 +21,8 @@
     "concat:css": "concat -o css/style.concat.css css/icon-font.css css/style.comp.css",
     "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' css/style.concat.css -o css/style.prefix.css",
     "compress:css": "node-sass css/style.prefix.css css/style.css --output-style compressed",
-    "build:css": "npm-run-all compile:sass concat:css prefix:css compress:css"
+    "dist:webfiles": "copyfiles index.html package.json css/style.css img/*.* ./dist",
+    "build:css": "npm-run-all compile:sass concat:css prefix:css compress:css dist:webfiles"
   },
   "author": "Frank",
   "license": "ISC"
