--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "concat:css": "concat -o css/style.concat.css css/icon-font.css css/style.comp.css",
     "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' css/style.concat.css -o css/style.prefix.css",
     "compress:css": "node-sass css/style.prefix.css css/style.css --output-style compressed",
-    "dist:webfiles": "copyfiles index.html package.json css/style.css img/*.* ./dist",
+    "dist:webfiles": "copyfiles index.html package.json img/*.* css/style.css css/fonts/*.* ./dist",
     "build:css": "npm-run-all compile:sass concat:css prefix:css compress:css dist:webfiles"
   },
-  "author": "Frank",
+  "author": "Frank Pechar",
   "license": "ISC"
 }
