--- a/package.json
+++ b/package.json
@@ -1,18 +1,8 @@
 {
-  "name": "natours",
+  "name": "myprofile",
   "version": "1.0.0",
-  "description": "Natours Website",
-  "browserslist": "last 10 versions",
+  "description": "My Portfolio",
   "main": "index.js",
-  "devDependencies": {
-    "autoprefixer": "^10.4.0",
-    "concat": "^1.0.3",
-    "copyfiles": "^2.4.1",
-    "node-sass": "^6.0.1",
-    "npm-run-all": "^4.1.5",
-    "postcss": "^8.3.11",
-    "postcss-cli": "^9.0.2"
-  },
   "scripts": {
     "watch:sass": "node-sass sass/main.scss css/style.css -w",
     "devserver": "live-server",
@@ -21,9 +11,16 @@
     "concat:css": "concat -o css/style.concat.css css/icon-font.css css/style.comp.css",
     "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' css/style.concat.css -o css/style.prefix.css",
     "compress:css": "node-sass css/style.prefix.css css/style.css --output-style compressed",
-    "dist:webfiles": "copyfiles index.html package.json img/*.* css/style.css css/fonts/*.* ./dist",
-    "build:css": "npm-run-all compile:sass concat:css prefix:css compress:css dist:webfiles"
+    "build:css": "npm-run-all compile:sass concat:css prefix:css compress:css"
   },
   "author": "Frank Pechar",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "concat": "^1.0.3",
+    "node-sass": "^9.0.0",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.24",
+    "postcss-cli": "^10.1.0"
+  }
 }
